feat: API: /api/user/{address}
