# src/api/api.go
@@ -1,0 +1,7 @@
+package api
+
+type GetApiUserAddressNFTsParams struct {
+	Include_Metadata *bool
+	Page             *int
+	ItemsPerPage     *int
+}
